--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon main.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +15,8 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node": "^21.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
