--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# PORT = 4000
-# DB_URI = mongodb+srv://ank138795:123@cluster0.mddxbxf.mongodb.net/node_crud
+PORT = 4000
+DB_URI = mongodb+srv://ank138795:123@cluster0.mddxbxf.mongodb.net/node_crud
