--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT = 4000
-DB_URI = mongodb+srv://ank138795:123@cluster0.mddxbxf.mongodb.net/node_crud
+DB_URI = mongodb+srv://levananh:123@cluster0.mddxbxf.mongodb.net/node_crud
+DB_USERNAME=levananh
+DB_PASSWORD=123
+DB_CLUSTER=cluster0.mddxbxf.mongodb.net
+DB_DATABASE=node_crud
